docs/css/style.css
* {
    /* box-sizing: border-box; */
    padding: 0px;
    margin: 0px;
    border: none;
    background-color: transparent;
    list-style: none;
    font-style: none;
}

:root {
    --bee: #FFD55A;
    --leaf: #a3c560;
    --greenish: #53ac75;
    --lake: #0c8c81;
    --ocean: #176a77;
    --navy:#2f4858;

    --primary-color: var(--bee);
    --secondary-color: var(--leaf);
    --dark-primary-color: var(--navy);
    --dark-secondary-color: var(--ocean);
}

body {
    background-color: var(--primary-color);
}

.title, .subtitle, .navbar  {    
    font-family: "Happy monkey", sans-serif;
    font-size: 140%;
}

p ,h1, h2, h3, h4, h5, h6{
    font-family: 'Proza Libre', sans-serif;
}

a {
   font-style: normal; 
   color: black;
}

a:visited {
    color: black;
}

.navbar {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr ;
    /* padding: 0px 1.5em 0px; */
    background-color: var(--primary-color);
    
    position: relative;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    
}

.navbar-link {
    padding: 0em 0.5em;
    margin: 1em;
}

.navbar-link:hover, .logo:hover {
    transform:translateY(-8%);
    transition: translateY 300ms;
    transition-timing-function: ease;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;   
}

.left {
    display: flex;
    justify-content: start;
    align-items: center;
}
.center {
    display: flex;
    justify-content: center;
    align-items: center;
}
.right {
    display: flex;
    justify-content: end;
    align-items: center;
}


.main-wrapper {
    display: grid;
    grid-template-columns: 1fr min(105ch, 100%) 1fr;
}

.main-wrapper > * {
    grid-column: 2;
  }

.page-content {

    display: flex;
    align-items: center;
    flex-direction: column;
    border-radius: 10px;
    background-color: white;
    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;   
}

#face {
    transition: transform 300ms;
    transition-timing-function: ease-out;
    flex: 1 auto;
    max-width: 40%;
}


#face:hover {
    transform:scale(1.1);
    transition: transform 120ms;
    transition-timing-function: ease;    
}


.fa-arrow-down {
    font-size: 150%;
    transform:scale(1.5) ;
}

.projects {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 5%;
    padding: 1 auto;
}
.hero {
    background-color: var(--primary-color);
    margin-bottom: 20px;
}

.projects-wrapper {
   
}

@media screen and (max-width: 1000px) {
    
    .projects {
        grid-template-columns: repeat(2, 1fr);
    }   
}


@media screen and (max-width: 650px) {
    
    .projects {
        grid-template-columns: repeat(1, 1fr);
    }   
}



.project-card {
    
    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;

    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    /* padding: 10px; */
    border-radius: 4%;
    border-style: transparent;
    max-width: 350px;

    transition: transform 50ms;
    background-color: white;
}

.project-card:hover {
    transform: scale(1.1);
    transition: transform 50ms;
}

.card-title {
    margin: 5%;
    font-size: 180%;
    
}

.projects-header {
    text-align: center;
    margin-bottom: 20px;
    font-size: 180%;
    background-color: white;
}


.footerbar {
    display: flex;
    justify-content: space-between;
    padding: 1.5em;
}

